--- a/Notebook_Sprint_6_fly_company/sprint_6_Petrushko_fly_company.ipynb
+++ b/Notebook_Sprint_6_fly_company/sprint_6_Petrushko_fly_company.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Описание проекта \n",
-    "Компании «F9» — это российская авиакомпания, выполняющая внутренние пассажирские авиаперевозки.  \n",
+    "Данные по Российской авиакомпании, выполняющей внутренние пассажирские авиаперевозки.  \n",
     "Нужно определить какие самолеты использует компания и с какой инстенсивностью. Как распределены рейсы по городам России и определить ТОП-10 городов по количеству принимаемых рейсов."
    ]
   },
@@ -297,11 +297,11 @@
    "metadata": {},
    "source": [
     "#### Анализ графика <a name=\"analys_fly_plt\"></a>\n",
-    "Судя по графику в компании F9 два больших направления деятельности (если конечно можно так апроксимировать по данным за один месяц, но вряд ли это исключение из общей картины):\n",
+    "Судя по графику в компании два больших направления деятельности (если конечно можно так апроксимировать по данным за один месяц, но вряд ли это исключение из общей картины):\n",
     "- Бизнес перелеты\n",
     "- Гражданская авиация\n",
     "\n",
-    "Судя по моделям и количеству рейсов, компания \"F9\" работает **преимущественно на рейсах средней дальности**."
+    "Судя по моделям и количеству рейсов, компания работает **преимущественно на рейсах средней дальности**."
    ]
   },
   {
@@ -553,7 +553,7 @@
     "\n",
     "По таблицам видно что:\n",
     "- меньше всего рейсов у самолетов \"гражданской дальней авиации\" - `Boeing 767-300` - 600 рейсов и `Boeing 777-300` - 300 рейсов\n",
-    "- из \"гражданской авиации\" больше всего рейсов `Sukhoi SuperJet-100` - 4185 рейсов. Т.е. большинство рейсов выполняется на \"средние\" расстояния. Компания F9 сделала ставку на `Sukhoi SuperJet-100`, что говорит скорее о лобистских решениях, чем об экономически оправданных, учитывая непростую судьбу самолета.\n",
+    "- из \"гражданской авиации\" больше всего рейсов `Sukhoi SuperJet-100` - 4185 рейсов. Т.е. большинство рейсов выполняется на \"средние\" расстояния. Компания сделала ставку на `Sukhoi SuperJet-100`, что говорит скорее о лобистских решениях, чем об экономически оправданных, учитывая непростую судьбу самолета.\n",
     "- \"бизнес авиация\" поровну разделила нагрузку между двумя моделями `Bombardier CRJ-200` - 4446 рейсов и `Cessna 208 Caravan`\t- 4557 \tрейсов. Это два самолета разного класса - Cessna попроще (значит подешевле). Получается что одинаково хорошо хорошо пользуются спросом бизнес перелеты средней дальности с соответствующим комфортом и короткие дешевые перелеты (\"авиа-такси\").   \n",
     "\n",
     "*Проверим общее количество бизнес и гражданских перелетов и построим соответсвующий график*"
@@ -745,7 +745,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Действительно можно говорить о том что два вида перелетов успешно поддерживаются компанией \"F9\". Количество рейсов \"бизнес-джетов\" больше на 20% примерно, но может это только в сентябре 2018 г."
+    "Действительно можно говорить о том что два вида перелетов успешно поддерживаются компанией. Количество рейсов \"бизнес-джетов\" больше на 20% примерно, но может это только в сентябре 2018 г."
    ]
   },
   {
@@ -757,13 +757,13 @@
     "- `model` — модели самолетов и `flights_amount` — количество рейсов для каждой модели самолетов\n",
     "- Дубликатов и пропусков не обнаружено, типы данных не требуют дополнительной обработки.\n",
     "\n",
-    "Судя по построенному графику **\"Количество рейсов для каждой модели самолета в сентябре 2018 года\"**, в компании \"F9\" чуществуют два больших направления деятельности:\n",
+    "Судя по построенному графику **\"Количество рейсов для каждой модели самолета в сентябре 2018 года\"**, в компании чуществуют два больших направления деятельности:\n",
     "- Бизнес перелеты (количество рейсов больше на 20% примерно)\n",
     "- Гражданская авиация\n",
     "\n",
-    "Проведенный анализ по моделям (их характеристикам) и количеству рейсов показывает, что компания \"F9\" работает **преимущественно на рейсах малой и средней дальности**:\n",
+    "Проведенный анализ по моделям (их характеристикам) и количеству рейсов показывает, что компания работает **преимущественно на рейсах малой и средней дальности**:\n",
     "- Меньше всего рейсов у самолетов \"дальней авиации\" - `Boeing 767-300` - 600 рейсов и `Boeing 777-300` - 300 рейсов\n",
-    "- Из \"гражданской авиации\" компания F9 сделала ставку на `Sukhoi SuperJet-100` - 4185 рейсов - больше всего рейсов в этой категории.\n",
+    "- Из \"гражданской авиации\" компания сделала ставку на `Sukhoi SuperJet-100` - 4185 рейсов - больше всего рейсов в этой категории.\n",
     "- Одинаково хорошо пользуются спросом \"бизнес перелеты\" средней дальности с соответствующим комфортом и короткие дешевые перелеты (\"авиа-такси\"). Между двумя моделями, `Bombardier CRJ-200` - 4446 рейсов и `Cessna 208 Caravan` - 4557 рейсов, нагрузка распределена практически поровну."
    ]
   },
@@ -1296,7 +1296,7 @@
    "source": [
     "**Анализ графиков**<a name=\"analys_city_plt\"></a>\n",
     "\n",
-    "Как и ожидалось мы обнаружили выбросы в данных - в Москву прилетает в много раз больше рейсов чем куда-либо. 130 рейсов в день это конечно не невероятно но подозрительно больше чем для других городов. Нам не известно, из данных, какой аэропорт (или город) для компании \"F9\" считается \"домашним\". Но по количеству рейсов это явно может быть Москва. Проверим количество рейсов по Москве и по другим городам. Также по этой таблице подтверждаются выводы предыдущего анализа - основной бизнес компании сосредоточен на рейсах средней дальности, а дальних рейсов выполняются буквально единицы в день."
+    "Как и ожидалось мы обнаружили выбросы в данных - в Москву прилетает в много раз больше рейсов чем куда-либо. 130 рейсов в день это конечно не невероятно но подозрительно больше чем для других городов. Нам не известно, из данных, какой аэропорт (или город) для компании считается \"домашним\". Но по количеству рейсов это явно может быть Москва. Проверим количество рейсов по Москве и по другим городам. Также по этой таблице подтверждаются выводы предыдущего анализа - основной бизнес компании сосредоточен на рейсах средней дальности, а дальних рейсов выполняются буквально единицы в день."
    ]
   },
   {
@@ -1614,7 +1614,7 @@
     "\n",
     "*Исходя из полученных данных и построенных графиков можно сказать, что:*\n",
     "- \"Выбросы\" в данных - первая 3 города по количеству рейсов - Москва (4022), Санкт_Петербург(966), Новосибирск(536). \n",
-    "- Больше всего рейсов в Москву - видимо центральный хаб для компании \"F9\", но это количество все равно в три раза меньше чем по всем остальным городам = 13165.\n",
+    "- Больше всего рейсов в Москву - видимо центральный хаб для компании, но это количество все равно в три раза меньше чем по всем остальным городам = 13165.\n",
     "- Подтвердились выводы по предыдущей базе основной бизнес компании в части гражданских перевозок сосредоточен на рейсах малой и средней дальности, а дальних рейсов выполняются буквально единицы в день.\n",
     "- В ТОП-10 вошли крупные города, промышленные центры крупных регионов и Сочи (главный курорт страны) - самые коммерческие направления."
    ]
@@ -1625,7 +1625,7 @@
    "source": [
     "### Заключение<a name=\"analys_end\"></a>\n",
     "\n",
-    "Данные компании \"F9\" предоставленные для анализа за два периода:\n",
+    "Данные компании предоставленные для анализа за два периода:\n",
     "- сентябрь 2018 г. - количество перелетов выполненных различными моделями самолетов\n",
     "- август 2018 г. - количество рейсов прибывших в город в день (101 город по всей стране)\n",
     "\n",
@@ -1649,7 +1649,7 @@
     "- Компания осуществляет регулярные перелеты в 101 город России.\n",
     "- В ТОП-10 по количеству рейсов вошли крупные города, промышленные центры крупных регионов и Сочи (главный курорт страны) - самые коммерческие направления.\n",
     "- Первые 3 города по количеству рейсов - Москва (4022), Санкт_Петербург (966), Новосибирск (536). \n",
-    "- Больше всего рейсов приходится на Москву - центральный хаб для компании \"F9\", но остальным городам России кол-во рейсов в 3 раза больше - 13165.\n",
+    "- Больше всего рейсов приходится на Москву - центральный хаб для компании, но остальным городам России кол-во рейсов в 3 раза больше - 13165.\n",
     "- По большинству городов среднее количество рейсов в день - до 10.\n",
     "\n",
     "**Общие выводы**\n",
