--- a/Notebook_Sprint_5_games/Sprint_5_sbor_Pertushko_games.ipynb
+++ b/Notebook_Sprint_5_games/Sprint_5_sbor_Pertushko_games.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Описание проекта \n",
-    "Из открытых источников доступны исторические данные о продажах игр, оценки пользователей и экспертов, жанры и платформы (например, Xbox или PlayStation). Нужно выявить определяющие успешность игры закономерности. Это позволит сделать ставку на потенциально популярный продукт и спланировать рекламные кампании. Данные по продажам игр до 2016 года. Мы планируем рекламную кампанию на 2017-й в декабре 2016. Отработаем принцип работы с данными.   \n",
+    "Из открытых источников доступны исторические данные о продажах игр, оценки пользователей и экспертов, жанры и платформы (например, Xbox или PlayStation). Нужно выявить определяющие успешность игры закономерности, что позволит сделать ставку на потенциально популярный продукт и спланировать рекламные кампании. Данные по продажам игр до 2016 года.   \n",
     "\n",
     "*В наборе данных есть аббревиатура ESRB (Entertainment Software Rating Board) — это ассоциация, определяющая возрастной рейтинг компьютерных игр. ESRB оценивает игровой контент и присваивает ему подходящую возрастную категорию, например, «Для взрослых», «Для детей младшего возраста» или «Для подростков».*"
    ]
@@ -34,12 +34,12 @@
    "source": [
     "### Задания по проекту\n",
     "#### Провести исследовательский анализ данных\n",
-    "- Сколько игр выпускалось в разные годы. Важны ли данные за все периоды?\n",
-    "- Как менялись продажи по платформам. Выберать платформы с наибольшими суммарными продажами и построить распределение по годам. выяснить за какой характерный срок появляются новые и исчезают старые платформы?\n",
-    "- Определить актуальный период в результате исследования предыдущих вопросов. Основной фактор — эти данные помогут построить прогноз на 2017 год. данные за предыдущие годы в работе не будем учитывать \n",
-    "- Выберать несколько потенциально прибыльных платформ.\n",
+    "- Сколько игр выпускалось в разные годы.\n",
+    "- Как менялись продажи по платформам. Определить \"срок жизни\" игровых платформ, платформы с наибольшими суммарными продажами. Построить распределение по годам.\n",
+    "- Определить актуальный период в результате исследования предыдущих вопросов. Основной фактор — эти данные помогут построить прогноз на 2017 год. Данные за предыдущие годы в работе не учитываем.\n",
+    "- Выбрать несколько потенциально прибыльных платформ.\n",
     "- Построить график «ящик с усами» по глобальным продажам игр в разбивке по платформам. Опишисать результаты.\n",
-    "- Как влияют на продажи внутри одной популярной платформы отзывы пользователей и критиков. Построить диаграмму рассеяния и посчитать корреляцию между отзывами и продажами. Сформулировать выводы.\n",
+    "- Определить влияние на продажи внутри одной популярной платформы отзывов пользователей и критиков (Построить диаграмму рассеяния и посчитать корреляцию между отзывами и продажами).\n",
     "- Сравнить выводы с продажами игр на других платформах.\n",
     "- Оценить общее распределение игр по жанрам. Определить самые прибыльные жанры и жанры с высокими и низкими продажами.\n",
     "\n",
