--- a/Notebook_Sprint_7_web_service/Sprint_7_Petrushko_web_service.ipynb
+++ b/Notebook_Sprint_7_web_service/Sprint_7_Petrushko_web_service.ipynb
@@ -14033,10 +14033,10 @@
     "- Пересмотреть вложения в рекламные источники\n",
     "    - снизить затраты на источники 1 и 2 \n",
     "    - за счет этого увеличить расходы на источники 3-5\n",
-    "    - из иточников 3-5 затраты распределить равномерно между ними - тогда выстрелит по продажам источник 4\n",
+    "    - из источников 3-5 затраты распределить равномерно между ними - тогда выстрелит по продажам источник 4\n",
     "    - по источникам 9-10 прекратить финансирование\n",
     "    - провести пробную акцию финансирования источников 6-8 с целью выявления потенциала на привлечения\n",
-    "- Контролировать уровень расходов, основываясь на цеелвых показателям ROMI за 6 месяцев.\n",
+    "- Контролировать уровень расходов, основываясь на целевых показателях ROMI за 6 месяцев.\n",
     "\n",
     "**Оптимизация выручки**\n",
     "- главной задачей сделать удержание клиента и повторные продажи;\n",
